Fixed icons not showing Added copy-webpack-plugin to copy assets to dist folder Also reduced background image size so that it will load faster.

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,7 @@ main {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: url(./assets/chill-out-transformed.png);
+  background: url(./assets/chill-out-transformed-min.jpg);
   min-height: 100dvh;
   background-position: 50%;
   background-repeat: no-repeat;
